# rust-blockchain

./: .gitignore  README.md
apps/eng_be/: .env  Cargo.toml
apps/eng_be/src/: api_docs.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
apps/eng_be/src/dtos/: user_dto.rs
apps/eng_be/src/models/: user_model.rs
apps/eng_be/src/routes/: mod.rs  user.rs
apps/my_run/: .env  Cargo.toml
apps/my_run/sql/: init.sql
apps/my_run/src/: lib.rs  main.rs  state.rs
apps/my_run/src/commons/: api_response.rs
apps/my_run/src/dtos/: mod.rs  paging_dtos.rs  response_dto.rs  user_dtos.rs
apps/my_run/src/models/: user_model.rs
apps/my_run/src/routes/: auth_routes.rs  root_routes.rs  user_route.rs  user_routes.rs
apps/my_run/src/services/: user_service.rs
apps/my_run/src/utils/: datetime_utils.rs  mod.rs  serde_date.rs
apps/my_run_1/: Cargo.toml
apps/my_secure/: Cargo.toml
apps/proj_blockchain/: Cargo.toml
apps/proj_crm/: Cargo.toml
apps/proj_parse_csv/: Cargo.toml  input.csv
apps/single/: Cargo.toml
docs/: deny.md  pre-commit.md  rust_learnxinyminutes.md
docs/axum/: 1_dotenv.md  1_minium_server.md  2_state.md  3_proj_structure_config.md  3_route.md  3_route_advanced.md  3_route_basic.md  4_proj_restful.md  4_route_memory_cache.md  5_route_db_env_encrypt.md
docs/grammar/: 11_mod.md  12_crate.md  15_struct.md  1_string.md  22_closure.md  23_cargo_doc.md  25_box.md  26_result.md  27_panic.md  28_marco.md  4_trait.md  5_flow_control.md  8_ownership.md  rs_attribute.md  rs_attributes_marco.md  rs_borrow.md  rs_box.md  rs_collection.md  rs_crate_mod.md  rs_dereferencing.md  rs_enum.md  rs_generic.md  rs_iterator.md  rs_optional_values.md  rs_prelude.md  rs_scalar_primitive_types.md  rs_scalar_types.md  rs_string.md  rs_struct_impl_trait.md  rs_system_trait.md  rs_trait_sys.md  rs_type_other.md  rs_value_reference_type.md  rust_learnxinyminutes.md
docs/grammar_new/: 10_option.md  11_crate.md  11_mod.md  12_collections.md  12_crate.md  13_generic.md  14_trait.md  15_test.md  16_closure.md  16_deref.md  17_destruct_pattern.md  18_workspace.md  1_string.md  20_thread.md  21_mutex_rwlock.md  21_thread.md  22_async_await.md  22_closure.md  23_tokio.md  24_tokio_mutex.md  26_result.md  27_mutex_rwlock.md  2_data_types.md  2_trait.md  30_tokio_mutex.md  3_statement_expression.md  4_trait.md  4_variable.md  6_loop.md  7_ownership.md  7_ownership_scope.md  8_lifetime.md  (+2 more)
myapp/: Cargo.toml
(+45 files in other folders)
