[package]
name = "eng_be"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

# API Documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Data & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Database (SQLx for PostgreSQL/Supabase)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Auth & Security
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
bcrypt = "0.17.1" # For password hashing


