[package]
name = "my_run"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.5", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
anyhow = "1.0.100"
bcrypt = "0.17.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"


# Database
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }







